--- a/HTML/termkit.css
+++ b/HTML/termkit.css
@@ -71,6 +71,8 @@ body {
   float: left;
   width: 32px;
   height: 32px;
+  background-size: 32px 32px !important;
+  background-repeat: no-repeat !important;
 }
 
 .termkitOutputView .widgetFile .name, .termkitOutputView .widgetFile .meta {
